Padding and spacing issues resolved

--- a/index.css
+++ b/index.css
@@ -210,8 +210,8 @@ ul {
 /***** I9 Model*********/
 
 .help-icon{
-  width: 1em;
-  height: 1em;
+  width: .9em;
+  height: .9em;
   background-color: mediumblue;
   display: flex;
   align-items: center;
@@ -221,10 +221,10 @@ ul {
 }
 
 .help-icon svg{
-  height: .5em;
-  width: .5em;
+  height: .6em;
+  width: .6em;
   fill: #fff;
-  margin: auto;
+  margin: 4.5px;;
 }
 
 .modal {
@@ -377,7 +377,7 @@ section.accordion {
   display: block;
   opacity: 1;
   transform: translate(0, 0);
-  margin-top: 1em;
+ /*margin-top: 1em;*/
   margin-bottom: 15px;
   padding: 0 50px 0 87px;
   transition: .3s opacity, .6s max-height;
@@ -469,6 +469,13 @@ section.accordion {
   transform: translate(-2px, 0) rotate(-45deg);
 }
 
+.body-tier{
+  width: 100%;
+  padding: 0 !important;
+  margin: 1em auto !important;
+}
+
+
 .file-button {
   margin: 1em 0 0 0;
 }
@@ -479,7 +486,7 @@ section.accordion {
   width: 100%;
   border: 2px solid rgba(0, 0, 0, 0.055);
   padding: 0 !important;
-  margin: auto !important;
+  margin: 2em auto !important;
 }
 
 /* Line Strike Seperator for I9 */
